--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "friendsofsymfony/user-bundle": "^1.3",
+        "doctrine/doctrine-migrations-bundle": "^1.1",
+        "gregwar/image-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
