primera version con los bundles funcionando

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,20 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
-
+    encoders:
+        FOS\UserBundle\Model\UserInterface: bcrypt
+    role_hierarchy:
+        ROLE_USER:       ROLE_USER
+        ROLE_GYM_ADM: ROLE_GYM_ADM
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+       # ROLE_PROFESOR:   ROLE_PROFESOR
+       # ROLE_RECEPCION:  ROLE_RECEPCION
+       # ROLE_ADMINISTRA: ROLE_GYM_ADM
+ 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory: ~
+         fos_userbundle:
+            id: fos_user.user_provider.username_email
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,7 +23,12 @@ security:
             security: false
 
         main:
-            anonymous: ~
+            form_login:
+                    success_handler: authentication.handler.login_success_handler
+                    provider: fos_userbundle
+                    csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
+            logout:       true
+            anonymous:    true
             # activate different ways to authenticate
 
             # http_basic: ~
@@ -22,3 +36,8 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/*, role: ROLE_USER }           
