--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Cache and logs (Symfony2)
+/app/cache/*
+/app/logs/*
+!app/cache/.gitkeep
+!app/logs/.gitkeep
+
+
 # Cache and logs (Symfony3)
 /var/cache/*
 /var/logs/*
@@ -5,7 +12,7 @@
 !var/logs/.gitkeep
 
 # Parameters
-/app/config/parameters.yml
+#/app/config/parameters.yml
 /app/config/parameters.ini
 
 # Managed by Composer
