--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,11 +2,11 @@
 parameters:
     database_host: 127.0.0.1
     database_port: null
-    database_name: symfony
+    database_name: generic_site
     database_user: root
-    database_password: null
-    mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
+    database_password: aBadAssPassword
+    mailer_transport: gmail
+    mailer_host: null
+    mailer_user: tu_Usuario_gmail@
+    mailer_password: tu_pass_gmail
     secret: 0accb24a8c8634ab6f7ee0414c984b780d6a7684
