--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "friendsofsymfony/user-bundle": "^1.3",
+        "friendsofsymfony/user-bundle": "dev-master",
         "doctrine/doctrine-migrations-bundle": "^1.1",
         "gregwar/image-bundle": "^2.0"
     },
